<resources>
    <string name="app_name">Swoosh</string>
    <string name="bg">background</string>
    <string name="logo">logo</string>
    <string name="womens">womens</string>
    <string name="go_all_in">GO ALL IN</string>
    <string name="on_going_all_out">ON GOING ALL OUT</string>
    <string name="find_a_team_in_your_city_and_dominate_the_league">Find a team in your city and dominate the league.</string>
    <string name="get_started">GET STARTED</string>
    <string name="mens">mens</string>
    <string name="desired_league">Desired League</string>
    <string name="co_ed">co-ed</string>
    <string name="next">next</string>
</resources>
